# mingw-pipeline-tests

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  README.md  lib.cpp  lib.hpp  pylib.cpp  test.cpp
.github/workflows/: build-and-test.yml
test/: test.cpp  test_python.py
